package ThucHanh_Practice.A4;

public enum Candidate {
    JOE_BIDEN, DONALD_TRUMP
}
